# HashFun

./: .cproject  .gitattributes  .gitignore  .project  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  CTestTestfile.cmake  CommandlineParser.cpp  CommandlineParser.h  CompilerDefs.h  CvsPrinter.cpp  CvsPrinter.h  DataSet.cpp  DataSet.h  HashBenchmark.cpp  HashBenchmark.h  HashFun.sln  HashFun.vcxproj  HashFun.vcxproj.filters  HashFunctionEntry.h  IPrinter.h  MurmurHash3.cpp  README.md  SuperFastHash.cpp  appveyor.yml  benchmark.cpp  benchmark.h  main.cpp  notki.txt  result.txt
hash/: CityHash.cpp  MurmurHash1.cpp  MurmurHash2.cpp  xxHash.cpp
include/hash/: CityHash.h  MurmurHash1.h  MurmurHash2.h  MurmurHash3.h  SuperFastHash.h  xxHash.h
test/: azure.rsa.enc  azure_ssh.enc  performance_results.template  runPerformance.sh
unittest/: DataSet_unittest.cpp
